# stock-evaluation-aggregator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.core  Dockerfile.plugin  Dockerfile.tradingagents  Dockerfile.tradingagents-cn  README.md  docker-compose.yml  fix_env.py  prototype.html  pyproject.toml  test_api.py  产品原型图v2.html  产品原型图v3.html  股票评估聚合器_需求文档.md  股票评估聚合器_需求文档_v2.md
docs/guides/: 零基础看懂微软量化双子星：Qlib 与 RD-Agent 白话指南.md
docs/planning/: Docker化与工具接入状态.md  SEA_Web_First_执行计划.md  当前开发状态.md
docs/technical/: 股票评估聚合器_技术文档_v1.md
plugins/: __init__.py  service.py  tradingagents.py  tradingagents_cn.py  tradingagents_common.py
prototypes/: 产品原型图v4.html
sea_api/: __init__.py  main.py
sea_core/: __init__.py  config.py  models.py  orchestrator.py  plugin_client.py  registry.py  report.py  storage.py
tests/: test_api.py  test_orchestrator.py  test_storage.py  test_tradingagents_adapter.py
web/: app.js  index.html  styles.css
