[project]
name = "stock-evaluation-aggregator"
version = "0.1.0"
description = "SEA: lightweight orchestration and result presentation for open-source stock evaluation projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "uvicorn[standard]>=0.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["sea_core", "sea_api", "plugins"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
